tests/ui/lint/snapshots/nested_fstring_solo_int_inner.snap
---
source: tests/ui/lint/mod.rs
---
  ● Nested f-string
   ╭─[test.lis:6:20]
 5 │   let n = 1
 6 │   fmt.Print(f"n = {f"{n}"} done")
   ·                    ───┬──
   ·                       ╰── already inside an f-string
 7 │ }
   ╰────
  help: Move the inner f-string's text and interpolations into the surrounding f-string · code: [lint.nested_fstring]
