tests/ui/lint/snapshots/nested_fstring_uninterpolated_inner_cedes_to_uninterpolated.snap
---
source: tests/ui/lint/mod.rs
---
  ● Uninterpolated f-string
   ╭─[test.lis:5:18]
 4 │ fn main() {
 5 │   fmt.Print(f"x {f"y"}")
   ·                  ──┬─
   ·                    ╰── zero interpolations
 6 │ }
   ╰────
  help: Remove the `f` prefix. A string without interpolations does not need to be a format string · code: [lint.uninterpolated_fstring]
