tests/ui/lint/snapshots/non_negative_comparison_alias_identifier_form.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:6:11]
 5 │   let s: MyString = "hi"
 6 │   let _ = MyString.length(s) < 0
   ·           ───────────┬──────────
   ·                      ╰── a length is never negative
 7 │ }
   ╰────
  help: A length is never negative, so this comparison always has the same result. Did you mean to compare to a different value? · code: [lint.non_negative_comparison]
