tests/ui/lint/snapshots/non_negative_comparison_native_identifier_form.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:4:11]
 3 │   let xs = [1, 2, 3]
 4 │   let _ = Slice.length(xs) < 0
   ·           ──────────┬─────────
   ·                     ╰── a length is never negative
 5 │ }
   ╰────
  help: A length is never negative, so this comparison always has the same result. Did you mean to compare to a different value? · code: [lint.non_negative_comparison]
