tests/ui/lint/snapshots/non_negative_comparison_ref_receiver.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:5:11]
 4 │   let r = &xs
 5 │   let _ = r.length() < 0
   ·           ───────┬──────
   ·                  ╰── a length is never negative
 6 │ }
   ╰────
  help: A length is never negative, so this comparison always has the same result. Did you mean to compare to a different value? · code: [lint.non_negative_comparison]
